--- a/templates/index.html
+++ b/templates/index.html
@@ -9,50 +9,54 @@
     <script src="static/script.js"></script>
   </head>
   <body>
-    <header>
-      <h1>ทำนายเบาหวานด้วยโมเดล VotingClassifier</h1>
-    </header>
+    <div class="container">
+      <header>
+        <h1>ทำนายเบาหวานด้วยโมเดล VotingClassifier</h1>
+      </header>
 
-    <main>
-      <div>
-        <form action="/predict" method="post">
-          <!-- รับข้อมูลเฉพาะฟีเจอร์ที่โมเดลต้องการ -->
-          <div>
-            <label for="Glucose">Glucose:</label>
-            <input type="text" id="Glucose" name="Glucose" required />
+      <main>
+        <div>
+          <form action="/predict" method="post">
+            <!-- รับข้อมูลเฉพาะฟีเจอร์ที่โมเดลต้องการ -->
+            <div>
+              <label for="Glucose">Glucose:</label>
+              <input type="text" id="Glucose" name="Glucose" required />
+            </div>
+
+            <div>
+              <label for="Insulin">Insulin:</label>
+              <input type="text" id="Insulin" name="Insulin" required />
+            </div>
+
+            <div>
+              <label for="BMI">BMI:</label>
+              <input type="text" id="BMI" name="BMI" required />
+            </div>
+
+            <input type="submit" value="Predict" />
+            <!-- ปุ่มสำหรับแสดง/ซ่อนตาราง -->
+            <button id="toggle-table-btn" class="toggle-btn" type="button">
+              แสดงข้อมูลตาราง
+            </button>
+          </form>
+
+          {% if prediction_text %}
+          <div class="prediction {{ prediction_class }}">
+            <h2>{{ prediction_text }}</h2>
           </div>
-
-          <div>
-            <label for="Insulin">Insulin:</label>
-            <input type="text" id="Insulin" name="Insulin" required />
-          </div>
-
-          <div>
-            <label for="BMI">BMI:</label>
-            <input type="text" id="BMI" name="BMI" required />
-          </div>
-
-          <input type="submit" value="Predict" />
-          <!-- ปุ่มสำหรับแสดง/ซ่อนตาราง -->
-          <button id="toggle-table-btn" class="toggle-btn" type="button">
-            แสดงข้อมูลตาราง
-          </button>
-        </form>
-
-        {% if prediction_text %}
-        <div class="prediction {{ prediction_class }}">
-          <h2>{{ prediction_text }}</h2>
+          {% endif %}
         </div>
-        {% endif %}
-      </div>
 
-      <div>
-        <div id="table-container" class="table-container" style="display: none">
-          {% for table in tables %} 
-            {{ table|safe }} 
-          {% endfor %}
+        <div> 
+          <div
+            id="table-container"
+            class="table-container"
+            style="display: none"
+          >
+            {% for table in tables %} {{ table|safe }} {% endfor %}
+          </div>
         </div>
-      </div>
-    </main>
+      </main>
+    </div>
   </body>
 </html>
