--- a/static/style.css
+++ b/static/style.css
@@ -8,8 +8,7 @@
 
 body {
   font-family: 'Kanit', sans-serif;
-  background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-  color: #6a0572;
+  background: linear-gradient(135deg, #278acb, #a7e3ff);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -20,8 +19,8 @@ body {
 
 .container {
   width: 100%;
-  max-width: 600px;
-  background: linear-gradient(135deg, #ffdde1, #ee9ca7);
+  max-width: 1200px;
+  background: linear-gradient(90deg, #dceef7, #f1f1f1);
   padding: 30px;
   border-radius: 12px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
@@ -34,7 +33,16 @@ header {
 
 header h1 {
   font-size: 1.8rem;
-  color: #ff69b4;
+  color: #345091;
+}
+
+header img{
+  width: 250px;
+  height: 250px;
+  border:#278acb 1px solid;
+  padding: 20px;
+  border-radius: 50%;
+  margin-bottom: 10px;
 }
 
 form {
@@ -45,36 +53,37 @@ form {
 
 label {
   font-size: 1rem;
-  color: #6a0572;
+  color: #3d5da7;
 }
 
 input[type='text'] {
   width: 100%;
   padding: 12px;
-  background: linear-gradient(135deg, #ffdde1, #fae1dd);
-  border: 1px solid #ff69b4;
+  background: linear-gradient(135deg, #f1f1f1, #dceef7);
+  border: 1px solid #278acb;
   border-radius: 6px;
   color: #6a0572;
 }
 
 input[type='text']:focus {
   outline: none;
-  border-color: #ff4081;
+  border-color: #278acb;
 }
 
 input[type='submit'], .toggle-btn {
   padding: 12px;
-  background: linear-gradient(135deg, #ff69b4, #ff1493);
+  background: linear-gradient(270deg, #ff69b4, #278acb);
   border: none;
   border-radius: 6px;
   color: #fff;
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   cursor: pointer;
   transition: 0.3s;
+  font-weight: semi-bold;
 }
 
 input[type='submit']:hover, .toggle-btn:hover {
-  background: linear-gradient(135deg, #ff4081, #ff1493);
+  background: linear-gradient(135deg, #278acb, #ff1493);
 }
 
 .prediction {
@@ -92,16 +101,19 @@ input[type='submit']:hover, .toggle-btn:hover {
 }
 
 .prediction.negative {
-  background-color: #4caf50;
+  background-color: #278acb;
   color: #ffffff;
 }
 
 .table-container {
+  margin-top: 3rem;
   width: 100%;
   overflow-x: auto;
-  background: linear-gradient(135deg, #ffdde1, #fae1dd);
+  background: linear-gradient(135deg, #278acb, #ff69b4);
   padding: 10px;
   border-radius: 6px;
+  max-height: 400px;
+  overflow-y: auto;
 }
 
 .dataframe {
@@ -111,25 +123,25 @@ input[type='submit']:hover, .toggle-btn:hover {
 
 .dataframe th, .dataframe td {
   padding: 10px;
-  border: 1px solid #ff69b4;
+  border: 1px solid #278acb;
   text-align: center;
 }
 
 .dataframe th {
-  background-color: #ff69b4;
+  background-color: #278acb;
   color: #fff;
 }
 
 .dataframe tr:nth-child(even) {
-  background-color: #ffc1cc;
+  background-color: #a7e3ff;
 }
 
 .dataframe tr:nth-child(odd) {
-  background-color: #ffb6c1;
+  background-color: #79d5ff;
 }
 
 .dataframe tr:hover {
-  background-color: #ff85a2;
+  background-color: #278acb;
 }
 
 @media (max-width: 425px) {
