--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,10 @@
   <body>
     <div class="container">
       <header>
-        <h1>ทำนายเบาหวานด้วยโมเดล VotingClassifier</h1>
+        <img src="static/logo.png" alt="" />
+        <h1>ทำนายเบาหวานด้วยโมเดล</h1>
+        <h1>Logistic Regression</h1>
       </header>
-
       <main>
         <div>
           <form action="/predict" method="post">
@@ -47,7 +48,7 @@
           {% endif %}
         </div>
 
-        <div> 
+        <div>
           <div
             id="table-container"
             class="table-container"
