--- a/templates/index.html
+++ b/templates/index.html
@@ -20,17 +20,17 @@
           <form action="/predict" method="post">
             <!-- รับข้อมูลเฉพาะฟีเจอร์ที่โมเดลต้องการ -->
             <div>
-              <label for="Glucose">Glucose:</label>
+              <label for="Glucose">ระดับน้ำตาลในเลือด (mg/dL) → เช่น 90:</label>
               <input type="text" id="Glucose" name="Glucose" required />
             </div>
 
             <div>
-              <label for="Insulin">Insulin:</label>
+              <label for="Insulin">ระดับอินซูลิน (μU/mL) → เช่น 15:</label>
               <input type="text" id="Insulin" name="Insulin" required />
             </div>
 
             <div>
-              <label for="BMI">BMI:</label>
+              <label for="BMI">ค่าดัชนีมวลกาย BMI (kg/m²) → เช่น 22.5:</label>
               <input type="text" id="BMI" name="BMI" required />
             </div>
 
