--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@200;300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@200;300;400;500;600;700&display=swap");
 
 * {
   box-sizing: border-box;
@@ -18,10 +18,9 @@
 }
 
 body {
-  font-family: 'Kanit', sans-serif;
+  font-family: "Kanit", sans-serif;
   background: linear-gradient(135deg, #278acb, #a7e3ff);
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
@@ -49,19 +48,42 @@ header h1 {
 }
 
 @keyframes float {
-  0% { transform: translateY(0px); }
-  50% { transform: translateY(-10px); }
-  100% { transform: translateY(0px); }
+  0% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
 }
 
-header img{
+header img {
   width: 200px;
   height: 200px;
-  border:#278acb 1px solid;
+  border: #278acb 1px solid;
   padding: 20px;
   border-radius: 50%;
   margin-bottom: 10px;
   animation: float 3s ease-in-out infinite;
+}
+
+main .qrcode{
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+main .qrcode label{
+  font-size: 1.4rem;
+}
+
+main .qrcode img{
+  width: 200px;
+  height: 200px;
 }
 
 form {
@@ -70,12 +92,28 @@ form {
   gap: 15px;
 }
 
+form .reset {
+  display: flex;
+  justify-content: space-between;
+}
+
+form .reset #reset-btn {
+  border: none;
+  font-size: 1rem;
+  margin: 0 1rem 1rem 0;
+  color: #3d5da7;
+  text-decoration: underline;
+  opacity: 0.9;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
 label {
   font-size: 1rem;
   color: #3d5da7;
 }
 
-input[type='text'] {
+input[type="text"] {
   width: 100%;
   padding: 12px;
   background: linear-gradient(135deg, #f1f1f1, #dceef7);
@@ -84,14 +122,15 @@ input[type='text'] {
   color: #6a0572;
 }
 
-input[type='text']:focus {
+input[type="text"]:focus {
   outline: none;
   border-color: #278acb;
   box-shadow: 0 0 10px rgba(255, 105, 180, 0.8);
   transition: 0.3s;
 }
 
-input[type='submit'], .toggle-btn {
+input[type="submit"],
+.toggle-btn {
   padding: 12px;
   background: linear-gradient(270deg, #ff69b4, #278acb);
   border: none;
@@ -104,7 +143,8 @@ input[type='submit'], .toggle-btn {
   transition: transform 0.3s ease, background 0.3s ease;
 }
 
-input[type='submit']:hover, .toggle-btn:hover {
+input[type="submit"]:hover,
+.toggle-btn:hover {
   background: linear-gradient(135deg, #278acb, #ff1493);
   transform: scale(1.05);
 }
@@ -156,7 +196,8 @@ input[type='submit']:hover, .toggle-btn:hover {
   border-collapse: collapse;
 }
 
-.dataframe th, .dataframe td {
+.dataframe th,
+.dataframe td {
   padding: 10px;
   border: 1px solid #278acb;
   text-align: center;
