--- a/templates/index.html
+++ b/templates/index.html
@@ -53,6 +53,7 @@
         </div>
 
         <div id="table-container" class="table-container" style="display: none">
+          <div class="caption-table">** สามารถกดเลือกข้อมูลจากในตารางมากรอกในช่องได้! **</div>
           {% for table in tables %}
           <div class="dataframe">{{ table|safe }}</div>
           {% endfor %}
